Deploy Bookmarks for developers version 000

--- a/public/index.dev.html
+++ b/public/index.dev.html
@@ -1,9 +1,13 @@
 <html>
   <head>
-    <title>Angular 2 QuickStart</title>
+    <title>Local</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="bootstrap/dist/css/bootstrap.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Raleway:400,700,900" />
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lato:400,900" />
     <base href="/">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 
