--- a/public/index.dev.html
+++ b/public/index.dev.html
@@ -18,6 +18,8 @@
     <script src="js/vendor/system.js"></script>
 
     <script src="js/systemjs.config.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="bootstrap/dist/js/bootstrap.js"></script>
     <script>
       System.import('app').catch(function(err) { console.error(err); });
     </script>
