--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,9 @@
     <script src="js/vendor/shim.min.js"></script>
     <script src="js/vendor/zone.min.js"></script>
     <script src="js/vendor/Reflect.js"></script>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="js/bootstrap.js"></script>
   </head>
 
   <!-- 3. Display the application -->
